# TikalMeetup2024Ingestion

./: .gitignore  README.md  fetch_data.py  process_file.py  pyproject.toml
